[gd_scene load_steps=10 format=3 uid="uid://ofdavayo646s"]

[ext_resource type="Script" uid="uid://ncfecgg2vlrj" path="res://Scripts/Characters/bouncy_figher.gd" id="1_iunsq"]
[ext_resource type="Texture2D" uid="uid://blxxaocc36x0r" path="res://Assets/Sprites/Characters/onurbFighter.jpg" id="2_hptsq"]
[ext_resource type="AudioStream" uid="uid://bn07h8gbcr3ti" path="res://Assets/Audio/SFX/onurbdead.ogg" id="3_33l34"]
[ext_resource type="AudioStream" uid="uid://lpnaf5awqgx4" path="res://Assets/Audio/SFX/onurbatk.ogg" id="4_ufwu5"]
[ext_resource type="AudioStream" uid="uid://cqaakefnkhofw" path="res://Assets/Audio/SFX/winblock.ogg" id="5_sdxi7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2isr3"]
size = Vector2(31, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybg12"]
size = Vector2(36, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1w510"]
size = Vector2(31, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxyy5"]
size = Vector2(31, 31)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 9
script = ExtResource("1_iunsq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-6.67572e-06, 0)
scale = Vector2(0.026, 0.026)
texture = ExtResource("2_hptsq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2isr3")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_ybg12")

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("RectangleShape2D_1w510")

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_33l34")

[node name="Attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ufwu5")

[node name="WinArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinArea"]
shape = SubResource("RectangleShape2D_hxyy5")

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_sdxi7")

[node name="Name" type="Label" parent="."]
offset_left = -20.0
offset_top = -38.0
offset_right = 20.0
offset_bottom = -15.0
text = "Bob"

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="finished" from="Death" to="." method="_on_death_finished"]
